--- a/config/database.yml
+++ b/config/database.yml
@@ -21,8 +21,13 @@ default: &default
 
 
 development:
-  <<: *default
-  database: index_development
+  primary:
+    <<: *default
+    database: index_development
+  queue:
+    <<: *default
+    database: index_development_queue
+    migrations_paths: db/queue_migrate
 
   # The specified database role being used to connect to PostgreSQL.
   # To create additional roles in PostgreSQL see `$ createuser --help`.
@@ -55,8 +60,13 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  <<: *default
-  database: index_test
+  primary:
+    <<: *default
+    database: index_test
+  queue:
+    <<: *default
+    database: index_test_queue
+    migrations_paths: db/queue_migrate
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -79,20 +89,7 @@ test:
 # for a full overview on how database connection configuration can be specified.
 #
 production:
-  primary: &primary_production
-    <<: *default
-    database: index_production
-    username: index
-    password: <%= ENV["INDEX_DATABASE_PASSWORD"] %>
-  cache:
-    <<: *primary_production
-    database: index_production_cache
-    migrations_paths: db/cache_migrate
-  queue:
-    <<: *primary_production
-    database: index_production_queue
-    migrations_paths: db/queue_migrate
-  cable:
-    <<: *primary_production
-    database: index_production_cable
-    migrations_paths: db/cable_migrate
+  <<: *default
+  database: index_production
+  username: index
+  password: <%= ENV["INDEX_DATABASE_PASSWORD"] %>
